--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2313,4 +2313,20 @@ input[type="submit"].password-page__signup-form__submit {
     @include visuallyHidden;
   }
 }
+.site-nav__link {
+  padding: 11px 20px 10px;
+  color: #222;
+  letter-spacing: 3px;
 
+  &:hover,
+  &:active,
+  &:focus {
+    background: #181818;
+    color: #fff;
+    -webkit-transition: ease-in-out 0.2s;
+    -moz-transition: ease-in-out 0.2s;
+    -ms-transition: ease-in-out 0.2s;
+    -o-transition: ease-in-out 0.2s;
+    transition: ease-in-out 0.2s;
+  }
+}
