--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -2210,7 +2210,7 @@ $socialIconFontStack: 'icons';
     display: inline-block;
 
     &:first-child > a {
-      padding-left: 0;
+      // padding-left: 0;
     }
 
     &:first-child .site-nav__dropdown {
@@ -2218,7 +2218,7 @@ $socialIconFontStack: 'icons';
     }
 
     &:last-child > a {
-      padding-right: 0;
+      // padding-right: 0;
     }
   }
 }
