--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -85,7 +85,7 @@
 
   {% section 'header' %}
 
-  <main class="wrapper main-content" role="main">
+  <main class="main-content" role="main">
     <div class="grid">
         <div class="grid__item">
           {{ content_for_layout }}
