--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -27,7 +27,7 @@
   {% endif %}
 
   <div class="grid-uniform grid-link__container">
-    {% assign grid_item_width = 'wide--one-fifth large--one-quarter medium-down--one-half' %}
+    {% assign grid_item_width = 'wide--one-quarter large--one-quarter medium-down--one-half' %}
 
     {% for product in collection.products %}
       {% assign featured = product %}
