updated some features - 01

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2387,3 +2387,23 @@ input[type="submit"].password-page__signup-form__submit {
     }
   }
 }
+html {
+  background: #202047;
+  padding: 15px;
+}
+.purple-bottom {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 15px;
+  background: #202047;
+  z-index: 1000;
+}
+.purple-top {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 15px;
+  background: #202047;
+  z-index: 1000;
+}
