--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -54,7 +54,7 @@
     {% if section.settings.show_view_all %}
       <hr class="hr--invisible"></hr>
       <div class="text-center">
-        <a href="{{ collection.url }}" class="btn" style="padding: 10px 20px;">
+        <a href="/collections/all" class="btn" style="padding: 10px 20px;">
           {{ 'collections.general.view_all' | t | upcase }}
         </a>
       </div>
