--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -82,7 +82,7 @@
 </head>
 
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
-
+<div class="purple-top"></div>
   {% section 'header' %}
 
   <main class="wrapper main-content" role="main">
@@ -94,7 +94,7 @@
   </main>
 
   {% section 'footer' %}
-
+<div class="purple-bottom"></div>
   {{ 'theme.js' | asset_url | script_tag }}
 
 </body>
