--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -97,7 +97,9 @@
               </s>
             {% endif %}
           </div>
-
+          {% comment %}
+          [powr-countdown-timer id=f76e5965_1487581924]
+          {% endcomment %}
           <form action="/cart/add" method="post" enctype="multipart/form-data" id="AddToCartForm">
             <select name="id" id="productSelect" class="product-single__variants">
               {% for variant in product.variants %}
