--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2407,3 +2407,14 @@ html {
   background: #202047;
   z-index: 1000;
 }
+// countdown timer
+#appView .powrMark {
+  display: none !important;
+}
+#AddToCart {
+  width: 100%;
+  height: 60px;
+  border-radius: .3rem;
+  text-transform: uppercase;
+  font-size: 1em;
+}
