customized the product page ----- 03 (countdown timer setup and styling)

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2418,3 +2418,19 @@ html {
   text-transform: uppercase;
   font-size: 1em;
 }
+#counter_container {
+  background: #DFEEFF;
+  #my-counter {
+    padding-top: 10px;
+    .hurrifycountdown {
+      .value{
+        font-size: 35px !important;
+        color: #6CB0FF !important;
+      }
+      .label {
+        font-size: 12px !important;
+        color: #6CB0FF !important;
+      }
+    }
+  }
+}
